@@ -38,6 +38,33 @@ const char *cookfsCompressionOptions[] = {
     NULL
 };
 
+/* names for all defined compressions */
+const char *cookfsCompressionNames[256] = {
+    "none",
+    "zlib",
+    "bz2",
+    "", "", "", "", "", "", "", "", "", "", "", "", "",
+    /* 0x10 - 0x1f */
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    /* 0x10 - 0x1f */
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    /* 0xf0 - 0xfe */
+    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
+    "custom"
+};
+
 const int cookfsCompressionOptionMap[] = {
     COOKFS_COMPRESSION_NONE,
     COOKFS_COMPRESSION_ZLIB,
